--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
 <br>
 
 <div class="card">
-    <img src="./Images/WD.jpg" alt="Avatar" style="width:25%">
+    <img src="./images/WD.jpg" alt="Avatar" style="width:25%">
     <div class="container">
       <h4 style = "font-family:courier,arial,helvetica;">Daily Art Jams (Discord Bot)</h4> 
       <p style = "font-family:courier,arial,helvetica;">The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
@@ -90,7 +90,7 @@
 <div class="footer">
     <!--<p style = "font-family:courier,arial,helvetica;">This is the footer</p>-->
      <a href="https://github.com/Siddhartt" target="_blank">
-     <img src="./Images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+     <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
      </a>
      <a href="https://github.com/Siddhartt" target="_blank" style = "font-family:courier,arial,helvetica; color:black"><center>Github</center></a>
  </div>
