--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
 
 
 <div class="card">
-    <img src="./Images/SB.png" alt="Avatar" style="width:25%">
+    <img src="./images/SB.png" alt="Avatar" style="width:25%">
     <div class="container">
       <h4 style = "font-family:courier,arial,helvetica;">Star Bot (Discord Bot)</h4> 
       <p style = "font-family:courier,arial,helvetica;">Star Bot is a bot that users can use to give people stars for appreciation</p> 
