--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -91,7 +91,7 @@
 <div class="footer">
    <!--<p style = "font-family:courier,arial,helvetica;">This is the footer</p>-->
     <a href="https://github.com/Siddhartt" target="_blank">
-    <img src="./Images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+    <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
     </a>
 </div>
 </body>
