--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -89,10 +89,11 @@
 <br>
 
 <div class="footer">
-   <!--<p style = "font-family:courier,arial,helvetica;">This is the footer</p>-->
-    <a href="https://github.com/Siddhartt" target="_blank">
-    <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-    </a>
-</div>
+     <a href="https://github.com/Siddhartt" target="_blank">
+     <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+     </a>
+     <a href="https://github.com/Siddhartt" target="_blank" style = "font-family:courier,arial,helvetica; color:black"><center>Github</center></a>
+ </div>
+
 </body>
 </html>
