--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <style>
@@ -60,15 +61,17 @@
 
 <a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
 
+<div class="fade-inT">
 <div class="center">
     <h1 style = "font-family:courier,arial,helvetica;">More about me.</h1>
     <br>
     <br>
 </div>
-
+</div>
 
 <br>
 <br>
+<div class="fade-inT">
 <div class="card">
     <h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
     <div class="desc" style="text-align:left">
@@ -77,11 +80,12 @@
         I didn't like that so I jumped to Unity 3D and c#.<br>
         In the beginning it was really hard and I lost interest really quick.<br><br>
         A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I joined their Discord server and made some friends.<br>
-        Someone that i had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
+        Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
         Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
-        Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, i also want to do something with that later.<br>
-        This website is the first site i have ever made :D
+        Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
+        This website is the first site I have ever made :D
     </div>
+</div>
 </div>
 <br>
 <br>
