--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Daily Art Jams Bot</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <style>
@@ -56,6 +57,7 @@
 
 <a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
 
+<div class="fade-inT">
 <div class="center">
     <h1 style = "font-family:courier,arial,helvetica;">Daily Art Jams</h1>
     <h2 style = "font-family:courier,arial,helvetica;">The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
@@ -64,11 +66,17 @@
 </div>
 
 <div class="center">
-<img src="./images/WD.jpg" style="width:25%; border-radius: 10px;"">
+<img src="./images/WD.jpg" style="width:25%; border-radius: 10px;">
+<br>
+<br>
+<img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
+<a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>
 </div>
 <br>
 <br>
+</div>
 
+<div class="fade-inC">
 <h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
 <p style = "font-family:courier,arial,helvetica; ">This bot will send a random theme every 24 hour.</p>
 <p style = "font-family:courier,arial,helvetica; ">It will send a theme out of a list with more than 100+ themes.</p>
@@ -82,6 +90,7 @@
 <br>
 <br>
 <br>
+</div>
 
 
 
