--- a/StarBot.htm
+++ b/StarBot.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Star Bot</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <style>
@@ -56,6 +57,7 @@
 
 <a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
 
+<div class="fade-inT">
 <div class="center">
     <h1 style = "font-family:courier,arial,helvetica;">Star Bot</h1>
     <h2 style = "font-family:courier,arial,helvetica;">Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
@@ -65,10 +67,16 @@
 
 <div class="center">
   <img src="./images/SB.png" style="width:25%; border-radius: 10px;" >
+  <br>
+  <br>
+  <img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
+  <a target="_blank" href="https://discordapp.com/oauth2/authorize?client_id=666040009941581839&permissions=8&redirect_uri=https%3A%2F%2Fdiscordapp.com%2Fapi%2Foauth2%2Fauthorize%3Fclient_id%3D666040009941581839%26permissions%3D8%26scope%3Dbot&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>  
   </div>
   <br>
   <br>
+</div>
 
+<div class="fade-inC">
 <h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
 <p style = "font-family:courier,arial,helvetica; ">User1: Does someone know how i can invite my friend to this server?</p>
 <p style = "font-family:courier,arial,helvetica; ">User2: Yeh you just click on the server name and click invite, Send this link to your friend.</p>
@@ -90,9 +98,15 @@
 <p style = "font-family:courier,arial,helvetica; ">- SB help to get all the commands.</p>
 <p style = "font-family:courier,arial,helvetica; ">- SB star @user to give someone a star.</p>
 <p style = "font-family:courier,arial,helvetica; ">- SB check @user to check the amount of stars a user has.</p>
-<br>
-<br>
-<br>
+
+
+<script>
+  var i;
+  for (i = 0; i < 3; i++) { 
+      document.write("<br>");
+  }
+</script>
+</div>
 
 
 <div class="footer">
