changed it so the files aren't confusing

--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -92,12 +92,14 @@
 <br>
 <br>
 
-<div class="footer">
-     <a href="https://github.com/Siddhartt" target="_blank">
-     <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-     </a>
-     <a href="https://github.com/Siddhartt" target="_blank" style = "font-family:courier,arial,helvetica; color:black"><center>Github</center></a>
- </div>
+<div class="all">
+    <div class="footer">
+        <a href="https://github.com/Siddhartt" target="_blank">
+        <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+        </a>
+        <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+    </div>
+  </div>
 
 </body>
 </html>
