--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -69,7 +69,7 @@
 <img src="./images/WD.jpg" style="width:25%; border-radius: 10px;">
 <br>
 <br>
-<img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
+<img src="https://top.gg/api/widget/servers/666040009941581839.svg?" alt="StarBot">
 <a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>
 </div>
 <br>
@@ -94,11 +94,14 @@
 
 
 
-<div class="footer">
-   <!--<p style = "font-family:courier,arial,helvetica;">This is the footer</p>-->
-    <a href="https://github.com/Siddhartt" target="_blank">
-    <img src="./Images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-    </a>
+<div class="all">
+  <div class="footer">
+      <a href="https://github.com/Siddhartt" target="_blank">
+      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>
+      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+  </div>
 </div>
+
 </body>
 </html>
