--- a/StarBot.htm
+++ b/StarBot.htm
@@ -54,51 +54,54 @@
 
     
 </style>
+<div class="all">
+  <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
 
-<a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
-
-<div class="fade-inT">
-<div class="center">
-    <h1 style = "font-family:courier,arial,helvetica;">Star Bot</h1>
-    <h2 style = "font-family:courier,arial,helvetica;">Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
-    <br>
-    <br>
-</div>
-
-<div class="center">
-  <img src="./images/SB.png" style="width:25%; border-radius: 10px;" >
-  <br>
-  <br>
-  <img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
-  <a target="_blank" href="https://discordapp.com/oauth2/authorize?client_id=666040009941581839&permissions=8&redirect_uri=https%3A%2F%2Fdiscordapp.com%2Fapi%2Foauth2%2Fauthorize%3Fclient_id%3D666040009941581839%26permissions%3D8%26scope%3Dbot&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>  
+  <div class="fade-inT">
+  <div class="center">
+      <h1>Star Bot</h1>
+      <h2>Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
+      <br>
+      <br>
   </div>
-  <br>
-  <br>
+
+  <div class="center">
+    <img src="./images/SB.png" style="width:25%; border-radius: 10px;" >
+    <br>
+    <br>
+    <img src="https://top.gg/api/widget/servers/666040009941581839.svg?usernamecolor=FFFFFF&topcolor=000000&__cf_chl_captcha_tk__=1ae5fee908ddaf100e6ce3ea9fc64b2202ad1ed5-1584713054-0-AUwFJowT7y34uVdKLq3J8ECvaC_1xSWD1ds3LlefVRL0CxPUDXLj7N8E0eXCL_SADhUZ5UpD-DnvLUArqR0vVzPrAi1BOzvJLXEygMoj6mTq4ChXAz2nr5FQ2PvnKIGD_JaKVjpXZhD9TRD0d09N2LZCjCUYgk9lEj6Kg22bl8GqgiUKsbVMLMv021pZdix9h2zIHXPqvuj6KO8wmsgua0dJLcznKRAu_Ov1PtwN_STkW2N0gOJh3b8tQkKHWrSQKIwUm_MeyEmzI_vkQVr18xJeYkTqnmvD7aFLauJVgdbFXafi89fBboe5eYVAdGnaPnEIlfQh4v58qjszQPhMxwW2HCPk3xfJsyjgGSxskbSzPt25bxmrDjSdYQoGMiyLIJq_1JVhm6ntjnAol8iN_PjR02GBa4KprK-P_WpNcHjhtviWC4yqUFAIPXJNVZm8RIPqzBuPe7xe-Wiypt2TgtZAunP8JXIRyEIZTdUdF63koDwHCHziw7KgXsTNSGscGw" alt="StarBot">
+    <a target="_blank" href="https://top.gg/api/widget/servers/666040009941581839.svg?"><h2 style = "color:black">Invite!</h2></a>  
+    </div>
+    <br>
+    <br>
+  </div>
 </div>
 
-<div class="fade-inC">
-<h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
-<p style = "font-family:courier,arial,helvetica; ">User1: Does someone know how i can invite my friend to this server?</p>
-<p style = "font-family:courier,arial,helvetica; ">User2: Yeh you just click on the server name and click invite, Send this link to your friend.</p>
-<p style = "font-family:courier,arial,helvetica; ">User1: Ah thanks man!</p>
-<p style = "font-family:courier,arial,helvetica; ">User1: SB star @User2</p>
-<br>
-<p style = "font-family:courier,arial,helvetica; ">This bot gives a user a star for appreciation.</p>
-<br>
-<h4 style = "font-family:courier,arial,helvetica; ">There are 6 roles:</h4>
-<p style = "font-family:courier,arial,helvetica; ">- 5 ⭐️'s</p>
-<p style = "font-family:courier,arial,helvetica; ">- 25 ⭐️'s</p>
-<p style = "font-family:courier,arial,helvetica; ">- 50 ⭐️'s</p>
-<p style = "font-family:courier,arial,helvetica; ">- 75 ⭐️'s</p>
-<p style = "font-family:courier,arial,helvetica; ">- 250 ⭐️'s</p>
-<p style = "font-family:courier,arial,helvetica; ">- ⭐️ Master</p>
-<br>
-<h4 style = "font-family:courier,arial,helvetica; ">Features:</h4>
-<p style = "font-family:courier,arial,helvetica; ">- Adds roles automatically.</p>
-<p style = "font-family:courier,arial,helvetica; ">- SB help to get all the commands.</p>
-<p style = "font-family:courier,arial,helvetica; ">- SB star @user to give someone a star.</p>
-<p style = "font-family:courier,arial,helvetica; ">- SB check @user to check the amount of stars a user has.</p>
-
+<div class="all">
+  <div class="fade-inC">
+  <h3>Description:</h3>
+  <p>User1: Does someone know how i can invite my friend to this server?</p>
+  <p>User2: Yeh you just click on the server name and click invite, Send this link to your friend.</p>
+  <p>User1: Ah thanks man!</p>
+  <p>User1: SB star @User2</p>
+  <br>
+  <p>This bot gives a user a star for appreciation.</p>
+  <br>
+  <h4>There are 6 roles:</h4>
+  <p>- 5 ⭐️'s</p>
+  <p>- 25 ⭐️'s</p>
+  <p>- 50 ⭐️'s</p>
+  <p>- 75 ⭐️'s</p>
+  <p>- 250 ⭐️'s</p>
+  <p>- ⭐️ Master</p>
+  <br>
+  <h4>Features:</h4>
+  <p>- Adds roles automatically.</p>
+  <p>- SB help to get all the commands.</p>
+  <p>- SB star @user to give someone a star.</p>
+  <p>- SB check @user to check the amount of stars a user has.</p> 
+  </div>
+</div>
 
 <script>
   var i;
@@ -106,14 +109,16 @@
       document.write("<br>");
   }
 </script>
-</div>
 
 
-<div class="footer">
-   <!--<p style = "font-family:courier,arial,helvetica;">This is the footer</p>-->
-    <a href="https://github.com/Siddhartt" target="_blank">
-    <img src="./Images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-    </a>
+<div class="all">
+  <div class="footer">
+      <a href="https://github.com/Siddhartt" target="_blank">
+      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>
+      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+  </div>
 </div>
+
 </body>
 </html>
