--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,11 @@
 </head>
 <body>
 <style>
+
+    div.all{
+       font-family:courier,arial,helvetica;
+    }
+
     div.center {
         text-align:center;
     }
@@ -51,44 +56,50 @@
       
         
 </style>
-
-<div class="fade-inT">
-  <div class="center">
-      <h1 style = "font-family:courier,arial,helvetica;">Hello,</h1>
-      <h2 style = "font-family:courier,arial,helvetica;">My name is Siddhart, I am currently 15 years old and live in the Netherlands.</h2>
-      <h3 style = "font-family:courier,arial,helvetica;">Here are some projects I have made</h3>
-      <a href="./AboutMe.htm"><h4 style = "font-family:courier,arial,helvetica;color:black">More about me</h4></a>
-      <br>
-      <br>
-      <h2 style = "font-family:courier,arial,helvetica;">Discord Bots:</h2>
-      <br>
+<div class="all">
+  <div class="fade-inT">
+    <div class="center">
+        <h1>Hello,</h1>
+        <h2>My name is Siddhart, I am currently 15 years old and live in the Netherlands.</h2>
+        <h3>Here are some projects I have made</h3>
+        <a href="./AboutMe.htm"><h4 color:black">More about me</h4></a>
+        <br>
+        <br>
+        <h2>Discord Bots:</h2>
+        <br>
+    </div>
   </div>
 </div>
 
 
 
-<div class="fade-inC">
-<div class="card">
-    <img src="./images/SB.png" alt="Avatar" style="width:25%">
-    <div class="container">
-      <h4 style = "font-family:courier,arial,helvetica;">Star Bot (Discord Bot)</h4> 
-      <p style = "font-family:courier,arial,helvetica;">Star Bot is a bot that users can use to give people stars for appreciation</p> 
-      <a href="./StarBot.htm"><p style = "font-family:courier,arial,helvetica;  color:black">More info</p></a>
+
+
+<div class="all">
+  <div class="fade-inC">
+    <div class="card">
+        <img src="./images/SB.png" alt="Avatar" style="width:25%">
+        <div class="container">
+          <h4>Star Bot (Discord Bot)</h4> 
+          <p>Star Bot is a bot that users can use to give people stars for appreciation</p> 
+          <a href="./StarBot.htm"><p style = "color:black">More info</p></a>
+        </div>
     </div>
+
+    <br>
+    <br>
+
+    <div class="card">
+        <img src="./images/WD.jpg" alt="Avatar" style="width:25%">
+        <div class="container">
+          <h4>Daily Art Jams (Discord Bot)</h4> 
+          <p>The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
+          <a href="./DailyArtJams.htm"><p style = "color:black">More info</p></a>
+        </div>
+    </div>
+  </div>
 </div>
 
-<br>
-<br>
-
-<div class="card">
-    <img src="./images/WD.jpg" alt="Avatar" style="width:25%">
-    <div class="container">
-      <h4 style = "font-family:courier,arial,helvetica;">Daily Art Jams (Discord Bot)</h4> 
-      <p style = "font-family:courier,arial,helvetica;">The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
-      <a href="./DailyArtJams.htm"><p style = "font-family:courier,arial,helvetica; color:black">More info</p></a>
-    </div>
-</div>
-</div>
 <script>
   var i;
   for (i = 0; i < 5; i++) { 
@@ -97,13 +108,15 @@
 </script>
 
 
+<div class="all">
+  <div class="footer">
+      <a href="https://github.com/Siddhartt" target="_blank">
+      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>
+      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+  </div>
+</div>
 
-<div class="footer">
-     <a href="https://github.com/Siddhartt" target="_blank">
-     <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-     </a>
-     <a href="https://github.com/Siddhartt" target="_blank" style = "font-family:courier,arial,helvetica; color:black"><center>Github</center></a>
- </div>
 
 </body>
 </html>
