--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
         <h1>Hello,</h1>
         <h2>My name is Siddhart, I am currently 15 years old and live in the Netherlands.</h2>
         <h3>Here are some projects I have made</h3>
-        <a href="./AboutMe.htm"><h4 color:black">More about me</h4></a>
+        <a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a>
         <br>
         <br>
         <h2>Discord Bots:</h2>
