--- a/index.htm
+++ b/index.htm
@@ -3,13 +3,12 @@
 <head>
     <title>Siddhart's portefolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
 <style>
 
-    div.all{
-       font-family:courier,arial,helvetica;
-    }
+    
 
     div.center {
         text-align:center;
