--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -3,6 +3,7 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 </head>
 <body>
 <style>
