--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -16,7 +16,6 @@
     }
     div.desc{
         color:black;
-        font-family:courier,arial,helvetica;
     }
 
     div.footer{
@@ -55,52 +54,57 @@
       
       .container {
         padding: 2px 16px;
-      }
+      }   
 
-    
 </style>
 
-<a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
-
-<div class="fade-inT">
-<div class="center">
-    <h1 style = "font-family:courier,arial,helvetica;">More about me.</h1>
-    <br>
-    <br>
-</div>
-</div>
-
-<br>
-<br>
-<div class="fade-inT">
-<div class="card">
-    <h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
-    <div class="desc" style="text-align:left">
-        My name is Siddhart, I am currently 15 years old and I live in the Netherlands.
-        I started coding when i was 13, I started with visual coding.
-        I didn't like that so I jumped to Unity 3D and c#.<br>
-        In the beginning it was really hard and I lost interest really quick.<br><br>
-        A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I joined their Discord server and made some friends.<br>
-        Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
-        Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
-        Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
-        This website is the first site I have ever made :D
+<div class="all">
+    <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
+    <div class="fade-inT">
+    <div class="center">
+        <h1>More about me.</h1>
+        <br>
+        <br>
+    </div>
     </div>
 </div>
+
+<br>
+<br>
+<div class="all">
+    <div class="fade-inT">
+    <div class="card">
+        <h3>Description:</h3>
+        <div class="desc" style="text-align:left">
+            My name is Siddhart, I am currently 15 years old and I live in the Netherlands.
+            I started coding when i was 13, I started with visual coding.
+            I didn't like that so I jumped to Unity 3D and c#.<br>
+            In the beginning it was really hard and I lost interest really quick.<br><br>
+            A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I joined their Discord server and made some friends.<br>
+            Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
+            Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
+            Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
+            This website is the first site I have ever made :D
+        </div>
+    </div>
+    </div>
 </div>
+
 <br>
 <br>
 <br>
 <br>
 
 <div class="all">
-    <div class="footer">
-        <a href="https://github.com/Siddhartt" target="_blank">
-        <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-        </a>
-        <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+    <div class="all">
+        <div class="footer">
+            <a href="https://github.com/Siddhartt" target="_blank">
+            <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+            </a>
+            <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+        </div>
     </div>
-  </div>
+</div>
 
 </body>
 </html>
