--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -56,41 +56,45 @@
     
 </style>
 
-<a href="./index.htm"><h3 style = "font-family:courier,arial,helvetica; color:black">Back</h3></a>
+  <div class="all">
+  <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
+  <div class="fade-inT">
+  <div class="center">
+      <h1>Daily Art Jams</h1>
+      <h2>The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
+      <br>
+      <br>
+  </div>
 
-<div class="fade-inT">
-<div class="center">
-    <h1 style = "font-family:courier,arial,helvetica;">Daily Art Jams</h1>
-    <h2 style = "font-family:courier,arial,helvetica;">The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
-    <br>
-    <br>
-</div>
+  <div class="center">
+  <img src="./images/WD.jpg" style="width:25%; border-radius: 10px;">
+  <br>
+  <br>
+  <img src="https://top.gg/api/widget/servers/666040009941581839.svg?" alt="StarBot">
+  <a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>
+  </div>
+  <br>
+  <br>
+  </div>
 
-<div class="center">
-<img src="./images/WD.jpg" style="width:25%; border-radius: 10px;">
-<br>
-<br>
-<img src="https://top.gg/api/widget/servers/666040009941581839.svg?" alt="StarBot">
-<a target="_blank" href="https://discordapp.com/api/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot"><h2 style = "font-family:courier,arial,helvetica; color:black">Invite!</h2></a>
-</div>
-<br>
-<br>
-</div>
 
-<div class="fade-inC">
-<h3 style = "font-family:courier,arial,helvetica; ">Description:</h3>
-<p style = "font-family:courier,arial,helvetica; ">This bot will send a random theme every 24 hour.</p>
-<p style = "font-family:courier,arial,helvetica; ">It will send a theme out of a list with more than 100+ themes.</p>
-<br>
-<p style = "font-family:courier,arial,helvetica; ">I made it for a friend with a Art channel on Discord. I published the bot and can be used by everyone.</p>
-<br>
-<h4 style = "font-family:courier,arial,helvetica; ">Commands:</h4>
-<p style = "font-family:courier,arial,helvetica; ">- Start the bot with TB start (only for users with admin permissions).</p>
-<p style = "font-family:courier,arial,helvetica; ">- Stop the bot with TB stop (only for users with admin permissions).</p>
-<br>
-<br>
-<br>
-<br>
+
+<div class="all">
+  <div class="fade-inC">
+  <h3>Description:</h3>
+  <p>This bot will send a random theme every 24 hour.</p>
+  <p>It will send a theme out of a list with more than 100+ themes.</p>
+  <br>
+  <p>I made it for a friend with a Art channel on Discord. I published the bot and can be used by everyone.</p>
+  <br>
+  <h4>Commands:</h4>
+  <p>- Start the bot with TB start (only for users with admin permissions).</p>
+  <p>- Stop the bot with TB stop (only for users with admin permissions).</p>
+  <br>
+  <br>
+  <br>
+  <br>
+  </div>
 </div>
 
 
