--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 <div class="all">
   <div class="fade-inT">
     <div class="center">
-        <h1>Hello,</h1>
+        <h1 style="font-weight:bolder">Hello,</h1>
         <h2>My name is Siddhart, I am currently 15 years old and live in the Netherlands.</h2>
         <h3>Here are some projects I have made</h3>
         <a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a>
