changes for phone

--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -35,7 +35,7 @@
     .card {
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
-        width: 75%;
+        width: 50%;
         border-radius: 10px;
         text-align: left;
         margin-left: auto;
@@ -74,8 +74,8 @@
 <div class="all">
     <div class="fade-inT">
     <div class="card">
-        <h3>Description:</h3>
-        <div class="desc" style="text-align:left">
+        <h3 style="padding-left: 10px;"">Description:</h3>
+        <div class="desc" style="text-align:left; padding-left: 10px;">
             My name is Siddhart, I am currently 15 years old and I live in the Netherlands.
             I started coding when i was 13, I started with visual coding.
             I didn't like that so I jumped to Unity 3D and c#.<br>
@@ -96,15 +96,17 @@
 <br>
 
 <div class="all">
-    <div class="all">
-        <div class="footer">
-            <a href="https://github.com/Siddhartt" target="_blank">
-            <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-            </a>
-            <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
-        </div>
+    <div class="footer">
+        <a href="https://github.com/Siddhartt" target="_blank">
+        <img hspace="10px" src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+        </a>  
+  
+        <a href="https://discord.gg/wzF9qfC" target="_blank">
+        <img hspace="10px" src="./images/Discord.png" title="Siddhart's Discord server" alt="Discord" height="50" width="50">
+        </a>
+        <br>
     </div>
-</div>
+  </div>
 
 </body>
 </html>
