--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -102,9 +102,13 @@
 <div class="all">
   <div class="footer">
       <a href="https://github.com/Siddhartt" target="_blank">
-      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      <img hspace="10px" src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>  
+
+      <a href="https://discord.gg/wzF9qfC" target="_blank">
+      <img hspace="10px" src="./images/Discord.png" title="Siddhart's Discord server" alt="Discord" height="50" width="50">
       </a>
-      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+      <br>
   </div>
 </div>
 
