--- a/StarBot.htm
+++ b/StarBot.htm
@@ -4,6 +4,7 @@
     <title>Star Bot</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <style>
@@ -115,9 +116,12 @@
 <div class="all">
   <div class="footer">
       <a href="https://github.com/Siddhartt" target="_blank">
-      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
-      </a>
-      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+      <img hspace="10px" src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>  
+
+      <a href="https://discord.gg/wzF9qfC" target="_blank">
+      <img hspace="10px" src="./images/Discord.png" title="Siddhart's Discord server" alt="Discord" height="50" width="50">
+      </a>    
   </div>
 </div>
 
