--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,9 @@
         width:100%;
         background-color: lightgray; 
         color: black;
-        text-align: center;
+        /*text-align: center;*/
+        display: flex;
+        justify-content: center;
     }
 
     div.org{
@@ -69,9 +71,6 @@
 </div>
 
 
-
-
-
 <div class="all">
   <div class="fade-inC">
     <div class="card">
@@ -108,12 +107,15 @@
 <div class="all">
   <div class="footer">
       <a href="https://github.com/Siddhartt" target="_blank">
-      <img src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      <img hspace="10px" src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
+      </a>  
+
+      <a href="https://discord.gg/wzF9qfC" target="_blank">
+      <img hspace="10px" src="./images/Discord.png" title="Siddhart's Discord server" alt="Discord" height="50" width="50">
       </a>
-      <a href="https://github.com/Siddhartt" target="_blank" style = "color:black"><center>Github</center></a>
+      <br>
   </div>
 </div>
-
 
 </body>
 </html>
