--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <title>Siddhart's portefolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <style>
