--- a/index.htm
+++ b/index.htm
@@ -53,6 +53,10 @@
         padding: 2px 16px;
       }
 
+      /*div {
+        background-image: url('./images/SBG.png');
+      }*/
+
       
         
 </style>
