--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -8,6 +8,11 @@
 </head>
 <body>
 <style>
+
+    body{
+        background-color: white;
+      }
+
     div.center {
         text-align:center;
         display: block;
@@ -42,6 +47,7 @@
         margin-left: auto;
         margin-right: auto;
         word-wrap: break-word;
+        background-color: white;
       }
       
       .card:hover {
