--- a/StarBot.htm
+++ b/StarBot.htm
@@ -8,6 +8,11 @@
 </head>
 <body>
 <style>
+
+  body{
+    background-color: white;
+  }
+
     div.center {
       text-align:center;
       display: block;
@@ -39,6 +44,7 @@
         margin-left: auto;
         margin-right: auto;
         word-wrap: break-word;
+        background-color: white;
       }
       
       .card:hover {
