changed font use

--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -66,7 +66,7 @@
 </style>
 
 <div class="all">
-    <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
+    <a href="./index.htm"><h3 style = "color:black; font-weight:lighter">Back</h3></a>
     <div class="fade-inT">
     <div class="center">
         <h1>More about me.</h1>
