--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -64,12 +64,12 @@
 </style>
 
   <div class="all">
-    <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
+    <a href="./index.htm"><h3 style = "color:black; font-weight:lighter">Back</h3></a>
 
     <div class="fade-inT">
     <div class="center">
         <h1>Daily Art Jams</h1>
-        <h2>The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
+        <h2 style="font-weight: lighter;">The Daily Art Jams bot was a fun and cool project to work on. It was the second bot i have made.</h2>
         <br>
         <br>
     </div>
@@ -88,15 +88,18 @@
 
 <div class="all">
   <div class="fade-inC">
+  <h3>Prefix:</h3>
+  <p>TB</p>
+  <br>
   <h3>Description:</h3>
-  <p>This bot will send a random theme every 24 hour.</p>
-  <p>It will send a theme out of a list with more than 100+ themes.</p>
+  <p>This bot will send a random theme every 24 hours.</p>
+  <p>It will send a theme out of a list with more than <b>100+ themes.</b></p>
   <br>
   <p>I made it for a friend with a Art channel on Discord. I published the bot and can be used by everyone.</p>
   <br>
   <h4>Commands:</h4>
-  <p>- Start the bot with TB start (only for users with admin permissions).</p>
-  <p>- Stop the bot with TB stop (only for users with admin permissions).</p>
+  <p>- Start the bot with <b>TB start</b> (only for users with admin permissions).</p>
+  <p>- Stop the bot with <b>TB stop</b> (only for users with admin permissions).</p>
   <br>
   <br>
   <br>
