--- a/StarBot.htm
+++ b/StarBot.htm
@@ -63,12 +63,12 @@
     
 </style>
 <div class="all">
-  <a href="./index.htm"><h3 style = "color:black">Back</h3></a>
+  <a href="./index.htm"><h3 style = "color:black; font-weight:lighter">Back</h3></a>
 
   <div class="fade-inT">
   <div class="center">
-      <h1>Star Bot</h1>
-      <h2>Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
+      <b><h1>Star Bot</h1></b>
+      <h2 style="font-weight: lighter">Star Bot was a little project that i had. It was the first Discord bot that i made.</h2>
       <br>
       <br>
   </div>
@@ -87,27 +87,30 @@
 
 <div class="all">
   <div class="fade-inC">
-  <h3>Description:</h3>
-  <p>User1: Does someone know how i can invite my friend to this server?</p>
-  <p>User2: Yeh you just click on the server name and click invite, Send this link to your friend.</p>
-  <p>User1: Ah thanks man!</p>
-  <p>User1: SB star @User2</p>
+  <h3>Prefix:</h3>
+  <p>SB</p>
   <br>
+  <h3>Description:</h3>
+  <p><b>User1:</b> Does someone know how i can invite my friend to this server?</p>
+  <p><b>User2:</b> Yeh you just click on the server name and click invite, Send this link to your friend.</p>
+  <p><b>User1:</b> Ah thanks man!</p>
+  <p><b>User1:</b> SB star @User2</p>
+
   <p>This bot gives a user a star for appreciation.</p>
   <br>
   <h4>There are 6 roles:</h4>
-  <p>- 5 ⭐️'s</p>
-  <p>- 25 ⭐️'s</p>
-  <p>- 50 ⭐️'s</p>
-  <p>- 75 ⭐️'s</p>
-  <p>- 250 ⭐️'s</p>
-  <p>- ⭐️ Master</p>
+  <b><p>- 5 ⭐️'s</p></b>
+  <b><p>- 25 ⭐️'s</p></b>
+  <b><p>- 50 ⭐️'s</p></b>
+  <b><p>- 75 ⭐️'s</p></b>
+  <b><p>- 250 ⭐️'s</p></b>
+  <b><p>- ⭐️ Master</p></b>
   <br>
   <h4>Features:</h4>
   <p>- Adds roles automatically.</p>
-  <p>- SB help to get all the commands.</p>
-  <p>- SB star @user to give someone a star.</p>
-  <p>- SB check @user to check the amount of stars a user has.</p> 
+  <p>- <b>SB help</b> to get all the commands.</p>
+  <p>- <b>SB star @USER</b> to give someone a star.</p>
+  <p>- <b>SB check @USER</b> to check the amount of stars a user has.</p> 
   </div>
 </div>
 
