--- a/index.htm
+++ b/index.htm
@@ -63,10 +63,10 @@
 <div class="all">
   <div class="fade-inT">
     <div class="center">
-        <h1 style="font-weight:bolder">Hello,</h1>
+        <b><h1 style="font-weight:bolder">Hello,</h1></b>
         <h2>My name is Siddhart, I am currently 15 years old and live in the Netherlands.</h2>
         <h3>Here are some projects I have made</h3>
-        <a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a>
+        <b><a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a></b>
         <br>
         <br>
         <h2>Discord Bots:</h2>
@@ -81,8 +81,8 @@
     <div class="card">
         <img src="./images/SB.png" alt="Avatar" style="width:25%">
         <div class="container">
-          <h4>Star Bot (Discord Bot)</h4> 
-          <p>Star Bot is a bot that users can use to give people stars for appreciation</p> 
+          <b><h4>Star Bot (Discord Bot)</h4></b>
+          <p>Star Bot is a bot that users can use to give people stars for appreciation</p>
           <a href="./StarBot.htm"><p style = "color:black">More info</p></a>
         </div>
     </div>
@@ -93,7 +93,7 @@
     <div class="card">
         <img src="./images/WD.jpg" alt="Avatar" style="width:25%">
         <div class="container">
-          <h4>Daily Art Jams (Discord Bot)</h4> 
+          <b><h4>Daily Art Jams (Discord Bot)</h4></b>
           <p>The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
           <a href="./DailyArtJams.htm"><p style = "color:black">More info</p></a>
         </div>
