--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
   <div class="fade-inT">
     <div class="center">
         <b><h1 style="font-weight:bolder">Hello,</h1></b>
-        <h2 style="font-weight:lighter">My name is <b>Siddhart</b>, I am currently <b>15 years old</b> and live in the <b>Netherlands</b>b>.</h2>
+        <h2 style="font-weight:lighter">My name is <b>Siddhart</b>, I am currently <b>15 years old</b> and live in the <b>Netherlands</b>.</h2>
         <h3 style="font-weight:lighter">Here are some projects I have made</h3>
         <b><a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a></b>
         <br>
