--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -87,12 +87,16 @@
             I started coding when i was 13, I started with visual coding.
             I didn't like that so I jumped to Unity 3D and c#.<br>
             In the beginning it was really hard and I lost interest really quick.<br><br>
-            A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I joined their Discord server and made some friends.<br>
+            A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I found someone who was hosting game jams and I joined their Discord server and made some friends.<br>
             Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
             Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
             Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
-            This website is the first site I have ever made :D
+            This website is the first site I have ever made :D<br>
+            <br>
+            <b>Skills: C#, Javascript, Python, HTML, CSS</b>
+            
         </div>
+        <br>
     </div>
     </div>
 </div>
@@ -107,7 +111,7 @@
         <a href="https://github.com/Siddhartt" target="_blank">
         <img hspace="10px" src="./images/GitHub.png" title="Siddhart's GitHub page" alt="GitHub" height="50" width="50">
         </a>  
-  
+        
         <a href="https://discord.gg/wzF9qfC" target="_blank">
         <img hspace="10px" src="./images/Discord.png" title="Siddhart's Discord server" alt="Discord" height="50" width="50">
         </a>
