--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,8 @@
 <div class="all">
   <div class="fade-inT">
     <div class="center">
-        <b><h1 style="font-weight:bolder">Hello,</h1></b>
-        <h2 style="font-weight:lighter">My name is <b>Siddhart</b>, I am currently <b>15 years old</b> and live in the <b>Netherlands</b>.</h2>
+        <b><h1 style="font-weight:bolder">Hey,</h1></b>
+        <h2 style="font-weight:lighter">I am <b>Siddhart</b>, <b>15 </b> and from the <b>Netherlands</b>.</h2>
         <h3 style="font-weight:lighter">Here are some projects I have made</h3>
         <b><a href="./AboutMe.htm"><h4 style="color:black">More about me</h4></a></b>
         <br>
@@ -79,7 +79,7 @@
 <div class="all">
   <div class="fade-inC">
     <div class="card">
-        <img src="./images/SB.png" alt="Avatar" style="width:25%">
+        <img src="./images/SB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
           <b><h4>Star Bot (Discord Bot)</h4></b>
           <p>Star Bot is a bot that users can use to give people stars for appreciation</p>
@@ -91,7 +91,7 @@
     <br>
 
     <div class="card">
-        <img src="./images/WD.jpg" alt="Avatar" style="width:25%">
+        <img src="./images/WD.jpg" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
           <b><h4>Daily Art Jams (Discord Bot)</h4></b>
           <p>The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
