--- a/AboutMe.htm
+++ b/AboutMe.htm
@@ -87,7 +87,7 @@
             I started coding when i was 13, I started with visual coding.
             I didn't like that so I jumped to Unity 3D and c#.<br>
             In the beginning it was really hard and I lost interest really quick.<br><br>
-            A few months later game development got interested for me again. I gave it a second chance. I found out about Itch.io I found someone who was hosting game jams and I joined their Discord server and made some friends.<br>
+            A few months later game development got interesting for me again. I gave it a second chance. I found out about Itch.io I found someone who was hosting game jams and I joined their Discord server and made some friends.<br>
             Someone that I had met was also from the Netherlands and we continued to make games together. Later we started a little game studio called Arctic Studio.<br>
             Working together on games was a really great and fun experience. I learned a lot about coding and I improved my coding skills.<br><br>
             Nowdays I still try to code every day and improve my coding skills. I worked with C#, Javascript, Python and a few more languages. I am now trying to get into Cyber Security, I also want to do something with that later.<br>
