--- a/DailyArtJams.htm
+++ b/DailyArtJams.htm
@@ -75,7 +75,7 @@
     </div>
 
     <div class="center">
-      <img src="./images/WD.jpg" style="width:25%; border-radius: 10px;">
+      <img src="./images/DAB.png" style="width:25%; border-radius: 10px;">
       <br>
       <br>
       <img src="https://top.gg/api/widget/servers/666040009941581839.svg?" alt="StarBot">
@@ -100,6 +100,7 @@
   <h4>Commands:</h4>
   <p>- Start the bot with <b>TB start</b> (only for users with admin permissions).</p>
   <p>- Stop the bot with <b>TB stop</b> (only for users with admin permissions).</p>
+  <p>- Get a theme <b>TB theme</b> (you can use this command for maybe if you are bored and want to draw something. You will get a random theme).</p>
   <br>
   <br>
   <br>
