--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,7 @@
     <br>
 
     <div class="card">
-        <img src="./images/WD.jpg" alt="Avatar" style="width:25%; border-radius: 10px;">
+        <img src="./images/DAB.png" alt="Avatar" style="width:25%; border-radius: 10px;">
         <div class="container">
           <b><h4>Daily Art Jams (Discord Bot)</h4></b>
           <p>The Daily Art Jams bot will host daily art jams in your Discord server. It will display a new theme every 24 hours</p> 
